Perma [Tier 2] /builds/worker/workspace/obj-build/dist/include/mozilla/CmdLineAndEnvUtils.h:485:5: error: no template named 'nsTAutoString'
Categories
(Toolkit :: Startup and Profile System, defect, P5)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr68 | --- | unaffected |
| firefox-esr78 | --- | unaffected |
| firefox79 | --- | unaffected |
| firefox80 | --- | unaffected |
| firefox81 | --- | fixed |
People
(Reporter: intermittent-bug-filer, Assigned: toshi)
References
(Blocks 1 open bug, Regression)
Details
(Keywords: intermittent-failure, regression)
Attachments
(1 file)
Filed by: malexandru [at] mozilla.com
Parsed log: https://treeherder.mozilla.org/logviewer.html#?job_id=311488404&repo=mozilla-central
Full log: https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/aTXANiBvTn-Ny748SH1Kow/runs/0/artifacts/public/logs/live_backing.log
[task 2020-07-30T09:56:13.451Z] 09:56:13 INFO - make[4]: Entering directory '/builds/worker/workspace/obj-build/security/ct/tests/gtest'
[task 2020-07-30T09:56:13.451Z] 09:56:13 INFO - security/ct/tests/gtest/missing-root-hash-sth.inc.stub
[task 2020-07-30T09:56:13.451Z] 09:56:13 INFO - /builds/worker/workspace/obj-build/_virtualenvs/init_py3/bin/python -m mozbuild.action.file_generate /builds/worker/checkouts/gecko/security/ct/tests/gtest/createSTHTestData.py main missing-root-hash-sth.inc .deps/missing-root-hash-sth.inc.pp .deps/missing-root-hash-sth.inc.stub /builds/worker/checkouts/gecko/security/ct/tests/gtest/missing-root-hash-sth.inc.tbs
[task 2020-07-30T09:56:13.451Z] 09:56:13 INFO - make[4]: Leaving directory '/builds/worker/workspace/obj-build/security/ct/tests/gtest'
[task 2020-07-30T09:56:13.476Z] 09:56:13 INFO - make[4]: Entering directory '/builds/worker/workspace/obj-build/toolkit/mozapps/update/common'
[task 2020-07-30T09:56:13.487Z] 09:56:13 INFO - /builds/worker/fetches/sccache/sccache /builds/worker/fetches/clang/bin/i686-w64-mingw32-clang++ -std=gnu++17 -o registrycertificates.o -c -U_FORTIFY_SOURCE -D_FORTIFY_SOURCE=2 -fstack-protector-strong -DNDEBUG=1 -DTRIMMED=1 -DNS_NO_XPCOM '-DMOZ_APP_BASENAME="Firefox"' -I/builds/worker/checkouts/gecko/toolkit/mozapps/update/common -I/builds/worker/workspace/obj-build/toolkit/mozapps/update/common -I/builds/worker/checkouts/gecko/other-licenses/nsis/Contrib/CityHash/cityhash -I/builds/worker/workspace/obj-build/dist/include -I/builds/worker/workspace/obj-build/dist/include/nspr -I/builds/worker/workspace/obj-build/dist/include/nss -DMOZILLA_CLIENT -include /builds/worker/workspace/obj-build/mozilla-config.h -Qunused-arguments -Qunused-arguments -Wall -Wbitfield-enum-conversion -Wempty-body -Wignored-qualifiers -Woverloaded-virtual -Wpointer-arith -Wshadow-field-in-constructor-modified -Wsign-compare -Wtype-limits -Wunreachable-code -Wunreachable-code-return -Wwrite-strings -Wno-invalid-offsetof -Wclass-varargs -Wempty-init-stmt -Wfloat-overflow-conversion -Wfloat-zero-conversion -Wloop-analysis -Wc++2a-compat -Wcomma -Wimplicit-fallthrough -Wunused-function -Wunused-variable -Wstring-conversion -Wtautological-overlap-compare -Wtautological-unsigned-enum-zero-compare -Wtautological-unsigned-zero-compare -Wno-error=tautological-type-limit-compare -Wno-inline-new-delete -Wno-error=deprecated-declarations -Wno-error=array-bounds -Wno-error=backend-plugin -Wno-error=return-std-move -Wno-error=atomic-alignment -Wno-unknown-pragmas -Wno-unused-function -Wno-conversion-null -Wno-switch -Wno-enum-compare -Wno-gnu-zero-variadic-macro-arguments -Werror=implicit-function-declaration -Wno-unknown-warning-option -fno-sized-deallocation -fno-aligned-new -fms-extensions -fcrash-diagnostics-dir=/builds/worker/artifacts -D_HAS_EXCEPTIONS=0 -fno-exceptions -fno-strict-aliasing -Wno-incompatible-ms-struct -mstackrealign -fno-rtti -ffunction-sections -fdata-sections -fno-exceptions -fno-math-errno -pipe -g -gcodeview -O2 -fno-omit-frame-pointer -funwind-tables -fexperimental-new-pass-manager -MD -MP -MF .deps/registrycertificates.o.pp /builds/worker/checkouts/gecko/toolkit/mozapps/update/common/registrycertificates.cpp
[task 2020-07-30T09:56:13.487Z] 09:56:13 WARNING - /builds/worker/checkouts/gecko/toolkit/mozapps/update/common/registrycertificates.cpp:46:44: warning: format specifies type 'int' but the argument has type 'LONG' (aka 'long') [-Wformat]
[task 2020-07-30T09:56:13.487Z] 09:56:13 INFO - LOG_WARN(("Could not open key. (%d)", retCode));
[task 2020-07-30T09:56:13.487Z] 09:56:13 INFO - ~~ ^~~~~~~
[task 2020-07-30T09:56:13.487Z] 09:56:13 INFO - %ld
[task 2020-07-30T09:56:13.488Z] 09:56:13 INFO - /builds/worker/checkouts/gecko/toolkit/mozapps/update/common/updatecommon.h:36:62: note: expanded from macro 'LOG_WARN'
[task 2020-07-30T09:56:13.488Z] 09:56:13 INFO - #define LOG_WARN(args) UpdateLog::GetPrimaryLog().WarnPrintf args
[task 2020-07-30T09:56:13.489Z] 09:56:13 INFO - ^~~~
[task 2020-07-30T09:56:13.489Z] 09:56:13 WARNING - /builds/worker/checkouts/gecko/toolkit/mozapps/update/common/registrycertificates.cpp:53:55: warning: format specifies type 'int' but the argument has type 'LONG' (aka 'long') [-Wformat]
[task 2020-07-30T09:56:13.489Z] 09:56:13 INFO - LOG_WARN(("Could not open fallback key. (%d)", retCode));
[task 2020-07-30T09:56:13.489Z] 09:56:13 INFO - ~~ ^~~~~~~
[task 2020-07-30T09:56:13.489Z] 09:56:13 INFO - %ld
[task 2020-07-30T09:56:13.489Z] 09:56:13 INFO - /builds/worker/checkouts/gecko/toolkit/mozapps/update/common/updatecommon.h:36:62: note: expanded from macro 'LOG_WARN'
[task 2020-07-30T09:56:13.489Z] 09:56:13 INFO - #define LOG_WARN(args) UpdateLog::GetPrimaryLog().WarnPrintf args
[task 2020-07-30T09:56:13.489Z] 09:56:13 INFO - ^~~~
[task 2020-07-30T09:56:13.489Z] 09:56:13 WARNING - /builds/worker/checkouts/gecko/toolkit/mozapps/update/common/registrycertificates.cpp:71:50: warning: format specifies type 'int' but the argument has type 'LONG' (aka 'long') [-Wformat]
[task 2020-07-30T09:56:13.489Z] 09:56:13 INFO - LOG_WARN(("Could not query info key. (%d)", retCode));
[task 2020-07-30T09:56:13.489Z] 09:56:13 INFO - ~~ ^~~~~~~
[task 2020-07-30T09:56:13.489Z] 09:56:13 INFO - %ld
[task 2020-07-30T09:56:13.489Z] 09:56:13 INFO - /builds/worker/checkouts/gecko/toolkit/mozapps/update/common/updatecommon.h:36:62: note: expanded from macro 'LOG_WARN'
[task 2020-07-30T09:56:13.489Z] 09:56:13 INFO - #define LOG_WARN(args) UpdateLog::GetPrimaryLog().WarnPrintf args
[task 2020-07-30T09:56:13.490Z] 09:56:13 INFO - ^~~~
[task 2020-07-30T09:56:13.490Z] 09:56:13 WARNING - /builds/worker/checkouts/gecko/toolkit/mozapps/update/common/registrycertificates.cpp:83:48: warning: format specifies type 'int' but the argument has type 'LONG' (aka 'long') [-Wformat]
[task 2020-07-30T09:56:13.490Z] 09:56:13 INFO - LOG_WARN(("Could not enum certs. (%d)", retCode));
[task 2020-07-30T09:56:13.490Z] 09:56:13 INFO - ~~ ^~~~~~~
[task 2020-07-30T09:56:13.490Z] 09:56:13 INFO - %ld
[task 2020-07-30T09:56:13.490Z] 09:56:13 INFO - /builds/worker/checkouts/gecko/toolkit/mozapps/update/common/updatecommon.h:36:62: note: expanded from macro 'LOG_WARN'
[task 2020-07-30T09:56:13.490Z] 09:56:13 INFO - #define LOG_WARN(args) UpdateLog::GetPrimaryLog().WarnPrintf args
[task 2020-07-30T09:56:13.490Z] 09:56:13 INFO - ^~~~
[task 2020-07-30T09:56:13.490Z] 09:56:13 WARNING - /builds/worker/checkouts/gecko/toolkit/mozapps/update/common/registrycertificates.cpp:93:49: warning: format specifies type 'int' but the argument has type 'LONG' (aka 'long') [-Wformat]
[task 2020-07-30T09:56:13.490Z] 09:56:13 INFO - LOG_WARN(("Could not open subkey. (%d)", retCode));
[task 2020-07-30T09:56:13.490Z] 09:56:13 INFO - ~~ ^~~~~~~
[task 2020-07-30T09:56:13.490Z] 09:56:13 INFO - %ld
[task 2020-07-30T09:56:13.490Z] 09:56:13 INFO - /builds/worker/checkouts/gecko/toolkit/mozapps/update/common/updatecommon.h:36:62: note: expanded from macro 'LOG_WARN'
[task 2020-07-30T09:56:13.491Z] 09:56:13 INFO - #define LOG_WARN(args) UpdateLog::GetPrimaryLog().WarnPrintf args
[task 2020-07-30T09:56:13.491Z] 09:56:13 INFO - ^~~~
[task 2020-07-30T09:56:13.491Z] 09:56:13 WARNING - /builds/worker/checkouts/gecko/toolkit/mozapps/update/common/registrycertificates.cpp:106:63: warning: format specifies type 'int' but the argument has type 'LONG' (aka 'long') [-Wformat]
[task 2020-07-30T09:56:13.491Z] 09:56:13 INFO - LOG_WARN(("Could not obtain name from registry. (%d)", retCode));
[task 2020-07-30T09:56:13.491Z] 09:56:13 INFO - ~~ ^~~~~~~
[task 2020-07-30T09:56:13.491Z] 09:56:13 INFO - %ld
[task 2020-07-30T09:56:13.491Z] 09:56:13 INFO - /builds/worker/checkouts/gecko/toolkit/mozapps/update/common/updatecommon.h:36:62: note: expanded from macro 'LOG_WARN'
[task 2020-07-30T09:56:13.492Z] 09:56:13 INFO - #define LOG_WARN(args) UpdateLog::GetPrimaryLog().WarnPrintf args
[task 2020-07-30T09:56:13.492Z] 09:56:13 INFO - ^~~~
[task 2020-07-30T09:56:13.492Z] 09:56:13 WARNING - /builds/worker/checkouts/gecko/toolkit/mozapps/update/common/registrycertificates.cpp:116:65: warning: format specifies type 'int' but the argument has type 'LONG' (aka 'long') [-Wformat]
[task 2020-07-30T09:56:13.492Z] 09:56:13 INFO - LOG_WARN(("Could not obtain issuer from registry. (%d)", retCode));
[task 2020-07-30T09:56:13.492Z] 09:56:13 INFO - ~~ ^~~~~~~
[task 2020-07-30T09:56:13.492Z] 09:56:13 INFO - %ld
[task 2020-07-30T09:56:13.492Z] 09:56:13 INFO - /builds/worker/checkouts/gecko/toolkit/mozapps/update/common/updatecommon.h:36:62: note: expanded from macro 'LOG_WARN'
[task 2020-07-30T09:56:13.492Z] 09:56:13 INFO - #define LOG_WARN(args) UpdateLog::GetPrimaryLog().WarnPrintf args
[task 2020-07-30T09:56:13.492Z] 09:56:13 INFO - ^~~~
[task 2020-07-30T09:56:13.493Z] 09:56:13 WARNING - /builds/worker/checkouts/gecko/toolkit/mozapps/update/common/registrycertificates.cpp:128:54: warning: format specifies type 'int' but the argument has type 'LONG' (aka 'long') [-Wformat]
[task 2020-07-30T09:56:13.493Z] 09:56:13 INFO - LOG_WARN(("Error on certificate check. (%d)", retCode));
[task 2020-07-30T09:56:13.493Z] 09:56:13 INFO - ~~ ^~~~~~~
[task 2020-07-30T09:56:13.493Z] 09:56:13 INFO - %ld
[task 2020-07-30T09:56:13.493Z] 09:56:13 INFO - /builds/worker/checkouts/gecko/toolkit/mozapps/update/common/updatecommon.h:36:62: note: expanded from macro 'LOG_WARN'
[task 2020-07-30T09:56:13.493Z] 09:56:13 INFO - #define LOG_WARN(args) UpdateLog::GetPrimaryLog().WarnPrintf args
[task 2020-07-30T09:56:13.493Z] 09:56:13 INFO - ^~~~
[task 2020-07-30T09:56:13.493Z] 09:56:13 WARNING - /builds/worker/checkouts/gecko/toolkit/mozapps/update/common/registrycertificates.cpp:135:60: warning: format specifies type 'int' but the argument has type 'LONG' (aka 'long') [-Wformat]
[task 2020-07-30T09:56:13.493Z] 09:56:13 INFO - LOG_WARN(("Error on certificate trust check. (%d)", retCode));
[task 2020-07-30T09:56:13.494Z] 09:56:13 INFO - ~~ ^~~~~~~
[task 2020-07-30T09:56:13.494Z] 09:56:13 INFO - %ld
[task 2020-07-30T09:56:13.494Z] 09:56:13 INFO - /builds/worker/checkouts/gecko/toolkit/mozapps/update/common/updatecommon.h:36:62: note: expanded from macro 'LOG_WARN'
[task 2020-07-30T09:56:13.494Z] 09:56:13 INFO - #define LOG_WARN(args) UpdateLog::GetPrimaryLog().WarnPrintf args
[task 2020-07-30T09:56:13.494Z] 09:56:13 INFO - ^~~~
[task 2020-07-30T09:56:13.494Z] 09:56:13 INFO - 9 warnings generated.
[task 2020-07-30T09:56:13.494Z] 09:56:13 INFO - make[4]: Leaving directory '/builds/worker/workspace/obj-build/toolkit/mozapps/update/common'
[task 2020-07-30T09:56:13.494Z] 09:56:13 INFO - make[4]: Entering directory '/builds/worker/workspace/obj-build/toolkit/mozapps/update/common'
[task 2020-07-30T09:56:13.495Z] 09:56:13 INFO - toolkit/mozapps/update/common/uachelper.o
[task 2020-07-30T09:56:13.495Z] 09:56:13 INFO - make[4]: Leaving directory '/builds/worker/workspace/obj-build/toolkit/mozapps/update/common'
[task 2020-07-30T09:56:13.775Z] 09:56:13 INFO - make[4]: Entering directory '/builds/worker/workspace/obj-build/toolkit/components/maintenanceservice'
[task 2020-07-30T09:56:13.777Z] 09:56:13 INFO - /builds/worker/fetches/sccache/sccache /builds/worker/fetches/clang/bin/i686-w64-mingw32-clang++ -std=gnu++17 -o servicebase.o -c -U_FORTIFY_SOURCE -D_FORTIFY_SOURCE=2 -fstack-protector-strong -DNDEBUG=1 -DTRIMMED=1 -DUNICODE -D_UNICODE -DNS_NO_XPCOM -I/builds/worker/checkouts/gecko/toolkit/components/maintenanceservice -I/builds/worker/workspace/obj-build/toolkit/components/maintenanceservice -I/builds/worker/checkouts/gecko/toolkit/mozapps/update/common -I/builds/worker/checkouts/gecko/toolkit/xre -I/builds/worker/workspace/obj-build/dist/include -I/builds/worker/workspace/obj-build/dist/include/nspr -I/builds/worker/workspace/obj-build/dist/include/nss -DMOZILLA_CLIENT -include /builds/worker/workspace/obj-build/mozilla-config.h -Qunused-arguments -Qunused-arguments -Wall -Wbitfield-enum-conversion -Wempty-body -Wignored-qualifiers -Woverloaded-virtual -Wpointer-arith -Wshadow-field-in-constructor-modified -Wsign-compare -Wtype-limits -Wunreachable-code -Wunreachable-code-return -Wwrite-strings -Wno-invalid-offsetof -Wclass-varargs -Wempty-init-stmt -Wfloat-overflow-conversion -Wfloat-zero-conversion -Wloop-analysis -Wc++2a-compat -Wcomma -Wimplicit-fallthrough -Wunused-function -Wunused-variable -Wstring-conversion -Wtautological-overlap-compare -Wtautological-unsigned-enum-zero-compare -Wtautological-unsigned-zero-compare -Wno-error=tautological-type-limit-compare -Wno-inline-new-delete -Wno-error=deprecated-declarations -Wno-error=array-bounds -Wno-error=backend-plugin -Wno-error=return-std-move -Wno-error=atomic-alignment -Wno-unknown-pragmas -Wno-unused-function -Wno-conversion-null -Wno-switch -Wno-enum-compare -Wno-gnu-zero-variadic-macro-arguments -Werror=implicit-function-declaration -Wno-unknown-warning-option -fno-sized-deallocation -fno-aligned-new -fms-extensions -fcrash-diagnostics-dir=/builds/worker/artifacts -D_HAS_EXCEPTIONS=0 -fno-exceptions -fno-strict-aliasing -Wno-incompatible-ms-struct -mstackrealign -fno-rtti -ffunction-sections -fdata-sections -fno-exceptions -fno-math-errno -pipe -g -gcodeview -O2 -fno-omit-frame-pointer -funwind-tables -fexperimental-new-pass-manager -MD -MP -MF .deps/servicebase.o.pp /builds/worker/checkouts/gecko/toolkit/components/maintenanceservice/servicebase.cpp
[task 2020-07-30T09:56:13.779Z] 09:56:13 INFO - In file included from /builds/worker/checkouts/gecko/toolkit/components/maintenanceservice/servicebase.cpp:9:
[task 2020-07-30T09:56:13.780Z] 09:56:13 INFO - In file included from /builds/worker/checkouts/gecko/toolkit/xre/nsWindowsRestart.cpp:15:
[task 2020-07-30T09:56:13.781Z] 09:56:13 ERROR - /builds/worker/workspace/obj-build/dist/include/mozilla/CmdLineAndEnvUtils.h:485:5: error: no template named 'nsTAutoString'
[task 2020-07-30T09:56:13.781Z] 09:56:13 INFO - nsTAutoString<T> arg;
[task 2020-07-30T09:56:13.782Z] 09:56:13 INFO - ^
[task 2020-07-30T09:56:13.783Z] 09:56:13 INFO - 1 error generated.
[task 2020-07-30T09:56:13.784Z] 09:56:13 ERROR - make[4]: *** [/builds/worker/checkouts/gecko/config/rules.mk:748: servicebase.o] Error 1
[task 2020-07-30T09:56:13.784Z] 09:56:13 INFO - make[4]: Leaving directory '/builds/worker/workspace/obj-build/toolkit/components/maintenanceservice'
[task 2020-07-30T09:56:13.784Z] 09:56:13 ERROR - make[3]: *** [/builds/worker/checkouts/gecko/config/recurse.mk:72: toolkit/components/maintenanceservice/target-objects] Error 2
[task 2020-07-30T09:56:13.785Z] 09:56:13 INFO - make[3]: *** Waiting for unfinished jobs....
[task 2020-07-30T09:56:13.794Z] 09:56:13 INFO - make[4]: Entering directory '/builds/worker/workspace/obj-build/toolkit/mozapps/update/common'
<...>
[task 2020-07-30T09:56:51.455Z] 09:56:51 INFO - Return code: 0
[task 2020-07-30T09:56:51.455Z] 09:56:51 INFO - Running post-run listener: _shutdown_sccache
[task 2020-07-30T09:56:51.455Z] 09:56:51 INFO - Running command: ['/builds/worker/fetches/sccache/sccache', '--stop-server'] in /builds/worker/checkouts/gecko
[task 2020-07-30T09:56:51.456Z] 09:56:51 INFO - Copy/paste: /builds/worker/fetches/sccache/sccache --stop-server
[task 2020-07-30T09:56:51.458Z] 09:56:51 INFO - Stopping sccache server...
[task 2020-07-30T09:56:51.459Z] 09:56:51 INFO - Compile requests 3132
[task 2020-07-30T09:56:51.459Z] 09:56:51 INFO - Compile requests executed 3108
[task 2020-07-30T09:56:51.459Z] 09:56:51 INFO - Cache hits 2352
[task 2020-07-30T09:56:51.459Z] 09:56:51 INFO - Cache hits (C/C++) 2328
[task 2020-07-30T09:56:51.459Z] 09:56:51 INFO - Cache hits (Rust) 24
[task 2020-07-30T09:56:51.459Z] 09:56:51 INFO - Cache misses 755
[task 2020-07-30T09:56:51.459Z] 09:56:51 INFO - Cache misses (C/C++) 755
[task 2020-07-30T09:56:51.459Z] 09:56:51 INFO - Cache timeouts 0
[task 2020-07-30T09:56:51.459Z] 09:56:51 INFO - Cache read errors 0
[task 2020-07-30T09:56:51.459Z] 09:56:51 INFO - Forced recaches 0
[task 2020-07-30T09:56:51.459Z] 09:56:51 INFO - Cache write errors 0
[task 2020-07-30T09:56:51.459Z] 09:56:51 INFO - Compilation failures 1
[task 2020-07-30T09:56:51.459Z] 09:56:51 INFO - Cache errors 0
[task 2020-07-30T09:56:51.459Z] 09:56:51 INFO - Non-cacheable compilations 0
[task 2020-07-30T09:56:51.459Z] 09:56:51 INFO - Non-cacheable calls 14
[task 2020-07-30T09:56:51.459Z] 09:56:51 INFO - Non-compilation calls 10
[task 2020-07-30T09:56:51.459Z] 09:56:51 INFO - Unsupported compiler calls 0
[task 2020-07-30T09:56:51.459Z] 09:56:51 INFO - Average cache write 0.097 s
[task 2020-07-30T09:56:51.459Z] 09:56:51 INFO - Average cache read miss 11.019 s
[task 2020-07-30T09:56:51.460Z] 09:56:51 INFO - Average cache read hit 0.060 s
[task 2020-07-30T09:56:51.460Z] 09:56:51 INFO - Failed distributed compilations 0
[task 2020-07-30T09:56:51.460Z] 09:56:51 INFO - Non-cacheable reasons:
[task 2020-07-30T09:56:51.460Z] 09:56:51 INFO - crate-type 9
[task 2020-07-30T09:56:51.460Z] 09:56:51 INFO - - 2
[task 2020-07-30T09:56:51.460Z] 09:56:51 INFO - unknown source language 2
[task 2020-07-30T09:56:51.460Z] 09:56:51 INFO - -E 1
[task 2020-07-30T09:56:51.460Z] 09:56:51 INFO - Cache location S3, bucket: Bucket(name=taskcluster-level-3-sccache-us-west-1, base_url=http://taskcluster-level-3-sccache-us-west-1.s3.amazonaws.com/)
[task 2020-07-30T09:56:51.460Z] 09:56:51 INFO - Return code: 0
[task 2020-07-30T09:56:51.460Z] 09:56:51 INFO - Running post-run listener: _summarize
[task 2020-07-30T09:56:51.460Z] 09:56:51 ERROR - # TBPL FAILURE #
[task 2020-07-30T09:56:51.460Z] 09:56:51 INFO - [mozharness: 2020-07-30 09:56:51.460691Z] FxDesktopBuild summary:
[task 2020-07-30T09:56:51.460Z] 09:56:51 ERROR - # TBPL FAILURE #
[fetches 2020-07-30T09:56:51.503Z] removing /builds/worker/fetches
[fetches 2020-07-30T09:56:52.078Z] finished
[taskcluster 2020-07-30 09:56:52.594Z] === Task Finished ===
[taskcluster 2020-07-30 09:56:53.515Z] Unsuccessful task run with exit code: 255 completed in 728.262 seconds
Comment 1•5 years ago
|
||
Toshihito, could you please take a look?
It looks to be from the changes in Bug 1650637
| Assignee | ||
Comment 2•5 years ago
|
||
You're right, thank you for letting me know! I'll prepare a patch for this.
| Assignee | ||
Comment 3•5 years ago
|
||
CommandLineParserWin in CmdLineAndEnvUtils.h causes a build error with MinGW
when building components/maintenanceservice/servicebase.cpp because it
uses nsTAutoString even though the class is not used in updater.exe.
A proposed fix is to put CommandLineParserWin behind MOZILLA_INTERNAL_API.
Comment 4•5 years ago
|
||
Set release status flags based on info from the regressing bug 1650637
Updated•5 years ago
|
Comment 6•5 years ago
|
||
| bugherder | ||
| Comment hidden (Intermittent Failures Robot) |
Updated•5 years ago
|
Updated•5 years ago
|
Description
•