Bug 1656185 - Put CommandLineParserWin behind MOZILLA_INTERNAL_API to compile with MinGW.  r=mossop

CommandLineParserWin in CmdLineAndEnvUtils.h causes a build error with MinGW
when building components/maintenanceservice/servicebase.cpp because it
uses nsTAutoString even though the class is not used in updater.exe.
A proposed fix is to put CommandLineParserWin behind MOZILLA_INTERNAL_API.

Differential Revision: https://phabricator.services.mozilla.com/D85423